# klopov

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
deploy/dockerfiles/: Dockerfile.local
klopov/: __init__.py  worker.py
klopov/app/: app.py
klopov/components/: __init__.py
klopov/components/currency_rates/: __init__.py  const.py  crud.py
klopov/core/: app.py  routers.py
klopov/core/config/: __init__.py
klopov/core/database/: client.py  crud.py  utils.py
