[tool.poetry]
name = "klopov"
version = "0.0.1"
description = "Financial API"
authors = ["Alexander Lavrov <internal@egnod.dev>"]
license = "MIT"

packages = [

    { include = "klopov", from = "." }

]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
sitri = "^0.7.0"
loguru = "^0.3.2"
cbor2 = "^5.1.2"
ujson = "^3.0.0"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.6.0"
bandit = "^1.6.2"
vulture = "^1.6"
bump2version = "^1.0.0"
uvicorn = "^0.11.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
